docs/api/qiskit/0.19/qiskit.transpiler.passes.SetLayout.mdx
---
title: SetLayout (v0.19)
description: API reference for qiskit.transpiler.passes.SetLayout in qiskit v0.19
in_page_toc_min_heading_level: 1
python_api_type: class
python_api_name: qiskit.transpiler.passes.SetLayout
---

# SetLayout

<Class id="qiskit.transpiler.passes.SetLayout" isDedicatedPage={true} github="https://github.com/qiskit/qiskit/tree/stable/0.14/qiskit/transpiler/passes/layout/set_layout.py" signature="SetLayout(*args, **kwargs)" modifiers="class">
  Set the `layout` property to the given layout.

  This pass associates a physical qubit (int) to each virtual qubit of the circuit (Qubit) in increasing order.

  SetLayout initializer.

  **Parameters**

  **layout** ([*Layout*](qiskit.transpiler.Layout "qiskit.transpiler.Layout")) – the layout to set.

  ## Attributes

  <span id="setlayout-is-analysis-pass" />

  ### is\_analysis\_pass

  <Attribute id="qiskit.transpiler.passes.SetLayout.is_analysis_pass">
    Check if the pass is an analysis pass.

    If the pass is an AnalysisPass, that means that the pass can analyze the DAG and write the results of that analysis in the property set. Modifications on the DAG are not allowed by this kind of pass.
  </Attribute>

  <span id="setlayout-is-transformation-pass" />

  ### is\_transformation\_pass

  <Attribute id="qiskit.transpiler.passes.SetLayout.is_transformation_pass">
    Check if the pass is a transformation pass.

    If the pass is a TransformationPass, that means that the pass can manipulate the DAG, but cannot modify the property set (but it can be read).
  </Attribute>

  ## Methods

  <span id="setlayout-name" />

  ### name

  <Function id="qiskit.transpiler.passes.SetLayout.name" signature="SetLayout.name()">
    Return the name of the pass.
  </Function>

  <span id="setlayout-run" />

  ### run

  <Function id="qiskit.transpiler.passes.SetLayout.run" signature="SetLayout.run(dag)">
    Run the SetLayout pass on dag.

    **Parameters**

    **dag** ([*DAGCircuit*](qiskit.dagcircuit.DAGCircuit "qiskit.dagcircuit.DAGCircuit")) – DAG to map.

    **Returns**

    the original DAG.

    **Return type**

    [DAGCircuit](qiskit.dagcircuit.DAGCircuit "qiskit.dagcircuit.DAGCircuit")
  </Function>
</Class>

